--- a/index.html
+++ b/index.html
@@ -13,21 +13,83 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Современные и стильные интерьеры для комфортной жизни</h1>
-        <div class="description-wrapper">
-            <p class="description">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией
-                дизайн-проектов
-            </p>
+    <section class="main">
+        <div class="container">
+            <h1>Современные и стильные интерьеры для комфортной жизни</h1>
+            <div class="description-wrapper">
+                <p class="description">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся
+                    разработкой и реализацией
+                    дизайн-проектов
+                </p>
+            </div>
         </div>
-        <h2>о нас</h2>
-        <p class="about-description">
-            Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за
-            уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера,
-            вплоть до каждой детали — нацелены на результат.
-        </p>
-        <a href="#!" class="btn">Посмотреть услуги</a>
-    </div>
+    </section>
+    <section class="about">
+        <div class="container">
+            <h2>О нас</h2>
+            <p class="about-description">
+                Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются
+                за
+                уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера,
+                вплоть до каждой детали — нацелены на результат.
+            </p>
+            <a href="#!" class="btn">Посмотреть услуги</a>
+        </div>
+    </section>
+    <section class="projects">
+        <div class="container">
+            <h2>Проекты</h2>
+            <ul>
+                <li class="projects__item">
+                    <img src="./resources/project-01.jpg" alt="Гостиная с панорамными окнами в ЖК Правобережный"
+                        class="projects__image">
+                    <h3 class="projects__title">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
+                    <a href="#!" class="projects__link">Подробнее →</a>
+                </li>
+                <li class="projects__item">
+                    <img src="./resources/project-02.jpg"
+                        alt="Уютнаягостиная с деревянными столиками и современной техникой в ЖК Норвежский парк"
+                        class="projects__image">
+                    <h3 class="projects__title">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
+                    <a href="#!" class="projects__link">Подробнее →</a>
+                </li>
+                <li class="projects__item">
+                    <img src="./resources/project-03.jpg" alt="Элегантная кухня с большими окнами в ЖК Сосновские озера"
+                        class="projects__image">
+                    <h3 class="projects__title">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
+                    <a href="#!" class="projects__link">Подробнее →</a>
+                </li>
+            </ul>
+            <a href="#!" class="projects__btn">Смотреть все проекты</a>
+        </div>
+    </section>
+    <section class="services">
+        <div class="container">
+            <h2 class="services__title">Услуги</h2>
+            <ul>
+                <li class="services__item">
+                    <img src="./resources/services-01.jpg" alt="Планировочное решение интерьера на чертеже"
+                        class="services__image">
+                    <h3>Планировочное решение — от 2500₽/м²</h3>
+                </li>
+                <li class="services__item">
+                    <img src="./resources/services-02.jpg" alt="Готовый дизайн-проект интерьера с подбором цветов"
+                        class="services__image">
+                    <h3>Дизайн-проект — от 3000₽/м²</h3>
+                </li>
+                <li class="services__item">
+                    <img src="./resources/services-03.jpg" alt=" Авторский надзор архитектора на строительной площадке"
+                        class="services__image">
+                    <h3>Авторский надзор — от 30 000₽ в месяц</h3>
+                </li>
+                <li class="services__item">
+                    <img src="./resources/services-04.jpg" alt="Подбор материалов для комплектации интерьера"
+                        class="services__image">
+                    <h3>Комплектация — 5% от стоимости спецификации</h3>
+                </li>
+            </ul>
+        </div>
+    </section>
 </body>
 
 </html>
