--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Студия дизайна интерьеров Метрика">
     <title>Метрика</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,83 +14,144 @@
 </head>
 
 <body>
-    <section class="main">
-        <div class="container">
-            <h1>Современные и стильные интерьеры для комфортной жизни</h1>
-            <div class="description-wrapper">
-                <p class="description">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся
-                    разработкой и реализацией
-                    дизайн-проектов
-                </p>
+    <!-- Header с навигацией -->
+    <header class="header">
+        <div class="container header-container">
+            <a href="#" class="logo">
+                <img src="resources/logo.svg" alt="Логотип Метрика">
+            </a>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link nav__link-active">О нас</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#projects" class="nav__link">Проекты</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#services" class="nav__link">Услуги</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#contacts" class="nav__link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1>Современные и стильные интерьеры для комфортной жизни</h1>
+                <div class="description-wrapper">
+                    <p class="description">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся
+                        разработкой и реализацией
+                        дизайн-проектов
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
-    <section class="about">
-        <div class="container">
-            <h2>О нас</h2>
-            <p class="about-description">
-                Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются
-                за
-                уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера,
-                вплоть до каждой детали — нацелены на результат.
-            </p>
-            <a href="#!" class="btn">Посмотреть услуги</a>
-        </div>
-    </section>
-    <section class="projects">
-        <div class="container">
-            <h2>Проекты</h2>
-            <ul>
-                <li class="projects__item">
-                    <img src="./resources/project-01.jpg" alt="Гостиная с панорамными окнами в ЖК Правобережный"
-                        class="projects__image">
-                    <h3 class="projects__title">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
-                    <a href="#!" class="projects__link">Подробнее →</a>
+        </section>
+        <section id="about" class="about">
+            <div class="container">
+                <h2>О нас</h2>
+                <p class="about-description">
+                    Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам
+                    обращаются
+                    за
+                    уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого
+                    интерьера,
+                    вплоть до каждой детали — нацелены на результат.
+                </p>
+                <a href="#services" class="btn">Посмотреть услуги</a>
+            </div>
+        </section>
+        <section id="projects" class="projects">
+            <div class="container">
+                <h2>Проекты</h2>
+                <ul>
+                    <li class="projects__item">
+                        <img src="./resources/project-01.jpg" alt="Гостиная с панорамными окнами в ЖК Правобережный"
+                            class="projects__image">
+                        <h3 class="projects__title">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
+                        <a href="#!" class="projects__link">Подробнее →</a>
+                    </li>
+                    <li class="projects__item">
+                        <img src="./resources/project-02.jpg"
+                            alt="Уютнаягостиная с деревянными столиками и современной техника в ЖК Норвежский парк"
+                            class="projects__image">
+                        <h3 class="projects__title">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
+                        <a href="#!" class="projects__link">Подробнее →</a>
+                    </li>
+                    <li class="projects__item">
+                        <img src="./resources/project-03.jpg"
+                            alt="Элегантная кухня с большими окнами в ЖК Сосновские озера" class="projects__image">
+                        <h3 class="projects__title">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
+                        <a href="#!" class="projects__link">Подробнее →</a>
+                    </li>
+                </ul>
+                <a href="#!" class="projects__btn">Смотреть все проекты</a>
+            </div>
+        </section>
+        <section id="services" class="services">
+            <div class="container">
+                <h2 class="services__title">Услуги</h2>
+                <ul>
+                    <li class="services__item">
+                        <img src="./resources/services-01.jpg" alt="Планировочное решение интерьера на чертеже"
+                            class="services__image">
+                        <h3>Планировочное решение — от 2500₽/м²</h3>
+                    </li>
+                    <li class="services__item">
+                        <img src="./resources/services-02.jpg" alt="Готовый дизайн-проект интерьера с подбором цветов"
+                            class="services__image">
+                        <h3>Дизайн-проект — от 3000₽/м²</h3>
+                    </li>
+                    <li class="services__item">
+                        <img src="./resources/services-03.jpg"
+                            alt=" Авторский надзор архитектора на строительной площадке" class="services__image">
+                        <h3>Авторский надзор — от 30 000₽ в месяц</h3>
+                    </li>
+                    <li class="services__item">
+                        <img src="./resources/services-04.jpg" alt="Подбор материалов для комплектации интерьера"
+                            class="services__image">
+                        <h3>Комплектация — 5% от стоимости спецификации</h3>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="landscape">
+            <div class="container">
+                <h3 class="landscape__title">Проект Двухкомнтаной квартиры в ЖК Лесной Пейзаж</h3>
+            </div>
+        </section>
+        <section id="contacts" class="contacts">
+            <div class="container">
+                <div class="contacts__wrapper">
+                    <h2 class="contacts__title">Контакты</h2>
+                    <a class="contacts__link" href="tel:+79358954535">+7 935 895-45-35</a> <br>
+                    <a class="contacts__link contacts__link-active" href="mailto:hello@mail.com">hello@mail.com</a>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <nav class="nav footer__nav">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="#about" class="nav__link nav__link-active footer__nav-link">О нас</a>
                 </li>
-                <li class="projects__item">
-                    <img src="./resources/project-02.jpg"
-                        alt="Уютнаягостиная с деревянными столиками и современной техникой в ЖК Норвежский парк"
-                        class="projects__image">
-                    <h3 class="projects__title">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
-                    <a href="#!" class="projects__link">Подробнее →</a>
+                <li class="nav__item">
+                    <a href="#projects" class="nav__link footer__nav-link">Проекты</a>
                 </li>
-                <li class="projects__item">
-                    <img src="./resources/project-03.jpg" alt="Элегантная кухня с большими окнами в ЖК Сосновские озера"
-                        class="projects__image">
-                    <h3 class="projects__title">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
-                    <a href="#!" class="projects__link">Подробнее →</a>
+                <li class="nav__item">
+                    <a href="#services" class="nav__link footer__nav-link">Услуги</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#contacts" class="nav__link footer__nav-link">Контакты</a>
                 </li>
             </ul>
-            <a href="#!" class="projects__btn">Смотреть все проекты</a>
-        </div>
-    </section>
-    <section class="services">
-        <div class="container">
-            <h2 class="services__title">Услуги</h2>
-            <ul>
-                <li class="services__item">
-                    <img src="./resources/services-01.jpg" alt="Планировочное решение интерьера на чертеже"
-                        class="services__image">
-                    <h3>Планировочное решение — от 2500₽/м²</h3>
-                </li>
-                <li class="services__item">
-                    <img src="./resources/services-02.jpg" alt="Готовый дизайн-проект интерьера с подбором цветов"
-                        class="services__image">
-                    <h3>Дизайн-проект — от 3000₽/м²</h3>
-                </li>
-                <li class="services__item">
-                    <img src="./resources/services-03.jpg" alt=" Авторский надзор архитектора на строительной площадке"
-                        class="services__image">
-                    <h3>Авторский надзор — от 30 000₽ в месяц</h3>
-                </li>
-                <li class="services__item">
-                    <img src="./resources/services-04.jpg" alt="Подбор материалов для комплектации интерьера"
-                        class="services__image">
-                    <h3>Комплектация — 5% от стоимости спецификации</h3>
-                </li>
-            </ul>
-        </div>
-    </section>
+        </nav>
+        <p class="footer__copyright">студия дизайна интерьера Метрика — 2023</p>
+    </footer>
 </body>
 
 </html>
