--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Студия дизайна интерьеров Метрика">
-    <title>Метрика</title>
+    <title>Метрика - студия дизайна интерьеров</title>
+    <link rel="icon" href="./resources/favicon.png" type="image/png">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,14 +17,14 @@
 <body>
     <!-- Header с навигацией -->
     <header class="header">
-        <div class="container header-container">
-            <a href="#" class="logo">
-                <img src="resources/logo.svg" alt="Логотип Метрика">
+        <div class="container header__container">
+            <a href="#" class="logo header__logo" aria-label="На главную страницу">
+                <img src="resources/logo.svg" alt="Логотип Метрика" width="180" height="35">
             </a>
-            <nav class="nav">
+            <nav class="nav header__nav" aria-label="Основная навигация">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#about" class="nav__link nav__link-active">О нас</a>
+                        <a href="#about" class="nav__link nav__link--active">О нас</a>
                     </li>
                     <li class="nav__item">
                         <a href="#projects" class="nav__link">Проекты</a>
@@ -38,119 +39,156 @@
             </nav>
         </div>
     </header>
-    <main>
+
+    <main class="main">
         <section class="hero">
-            <div class="container">
-                <h1>Современные и стильные интерьеры для комфортной жизни</h1>
-                <div class="description-wrapper">
-                    <p class="description">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся
-                        разработкой и реализацией
-                        дизайн-проектов
+            <div class="container hero__container">
+                <h1 class="hero__title">Современные и стильные интерьеры для комфортной жизни</h1>
+                <div class="hero__image-wrapper">
+                    <p class="hero__description">
+                        Мы&nbsp;&mdash; команда квалифицированных дизайнеров и&nbsp;архитекторов, занимающихся
+                        разработкой и&nbsp;реализацией  дизайн-проектов
                     </p>
                 </div>
             </div>
         </section>
-        <section id="about" class="about">
+
+        <section id="about" class="about section" aria-labelledby="about-title">
             <div class="container">
-                <h2>О нас</h2>
-                <p class="about-description">
-                    Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам
-                    обращаются
-                    за
-                    уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого
-                    интерьера,
-                    вплоть до каждой детали — нацелены на результат.
+                <h2 id="about-title" class="about__title section__title">О нас</h2>
+                <p class="about__description">
+                    Студия основана в&nbsp;2011&nbsp;году. Полностью отдаемся проектированию и&nbsp;реализации  интерьеров. К&nbsp;нам
+                    обращаются за&nbsp;уютом, индивидуальными решениями и&nbsp;практичностью. Находим конструктивные
+                    решения для каждого интерьера, вплоть до&nbsp;каждой детали&nbsp;&mdash; нацелены на&nbsp;результат.
                 </p>
-                <a href="#services" class="btn">Посмотреть услуги</a>
+                <a href="#services" class="button about__button button--primary">Посмотреть услуги</a>
             </div>
         </section>
-        <section id="projects" class="projects">
+
+        <section id="projects" class="projects section" aria-labelledby="projects-title">
             <div class="container">
-                <h2>Проекты</h2>
-                <ul>
+                <h2 id="projects-title" class="projects__title section__title">Проекты</h2>
+                <ul class="projects__list">
                     <li class="projects__item">
-                        <img src="./resources/project-01.jpg" alt="Гостиная с панорамными окнами в ЖК Правобережный"
-                            class="projects__image">
-                        <h3 class="projects__title">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
-                        <a href="#!" class="projects__link">Подробнее →</a>
+                        <article class="project-card">
+                            <picture>
+                                <source media="(max-width: 575px)" srcset="./resources/project-01-mob.jpg">
+                                <img src="./resources/project-01.jpg"
+                                    alt="Гостиная с панорамными окнами в ЖК Правобережный" class="project-card__image">
+                            </picture>
+                            <div class="project-card__content">
+                                <h3 class="project-card__title">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
+                                <a href="#!" class="project-card__link">Подробнее →</a>
+                            </div>
+                        </article>
                     </li>
                     <li class="projects__item">
-                        <img src="./resources/project-02.jpg"
-                            alt="Уютнаягостиная с деревянными столиками и современной техника в ЖК Норвежский парк"
-                            class="projects__image">
-                        <h3 class="projects__title">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
-                        <a href="#!" class="projects__link">Подробнее →</a>
+                        <article class="project-card">
+                            <picture>
+                                <source media="(max-width: 575px)" srcset="./resources/project-02-mob.jpg">
+                                <img src="./resources/project-02.jpg"
+                                    alt="Уютная гостиная с деревянными столиками и современной техникой в ЖК Норвежский парк"
+                                    class="project-card__image">
+                            </picture>
+                            <div class="project-card__content">
+                                <h3 class="project-card__title">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
+                                <a href="#!" class="project-card__link">Подробнее →</a>
+                            </div>
+                        </article>
                     </li>
                     <li class="projects__item">
-                        <img src="./resources/project-03.jpg"
-                            alt="Элегантная кухня с большими окнами в ЖК Сосновские озера" class="projects__image">
-                        <h3 class="projects__title">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
-                        <a href="#!" class="projects__link">Подробнее →</a>
+                        <article class="project-card">
+                            <picture>
+                                <source media="(max-width: 575px)" srcset="./resources/project-03-mob.jpg">
+                                <img src="./resources/project-03.jpg"
+                                    alt="Элегантная кухня с большими окнами в ЖК Сосновские озера"
+                                    class="project-card__image">
+                            </picture>
+                            <div class="project-card__content">
+                                <h3 class="project-card__title">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
+                                <a href="#!" class="project-card__link">Подробнее →</a>
+                            </div>
+                        </article>
                     </li>
                 </ul>
-                <a href="#!" class="projects__btn">Смотреть все проекты</a>
+                <a href="#!" class="button projects__button button--outline">Смотреть все проекты</a>
             </div>
         </section>
-        <section id="services" class="services">
+
+        <section id="services" class="services section section--dark" aria-labelledby="services-title">
             <div class="container">
-                <h2 class="services__title">Услуги</h2>
-                <ul>
+                <h2 id="services-title" class="services__title section__title">Услуги</h2>
+                <ul class="services__list">
                     <li class="services__item">
-                        <img src="./resources/services-01.jpg" alt="Планировочное решение интерьера на чертеже"
-                            class="services__image">
-                        <h3>Планировочное решение — от 2500₽/м²</h3>
+                        <article class="service-card">
+                            <img src="./resources/services-01.jpg" alt="Планировочное решение интерьера на чертеже"
+                                class="service-card__image">
+                            <h3 class="service-card__title">Планировочное решение — от 2500₽/м²</h3>
+                        </article>
                     </li>
                     <li class="services__item">
-                        <img src="./resources/services-02.jpg" alt="Готовый дизайн-проект интерьера с подбором цветов"
-                            class="services__image">
-                        <h3>Дизайн-проект — от 3000₽/м²</h3>
+                        <article class="service-card">
+                            <img src="./resources/services-02.jpg"
+                                alt="Готовый дизайн-проект интерьера с подбором цветов" class="service-card__image">
+                            <h3 class="service-card__title">Дизайн-проект — от 3000₽/м²</h3>
+                        </article>
                     </li>
                     <li class="services__item">
-                        <img src="./resources/services-03.jpg"
-                            alt=" Авторский надзор архитектора на строительной площадке" class="services__image">
-                        <h3>Авторский надзор — от 30 000₽ в месяц</h3>
+                        <article class="service-card">
+                            <img src="./resources/services-03.jpg"
+                                alt="Авторский надзор архитектора на строительной площадке" class="service-card__image">
+                            <h3 class="service-card__title">Авторский надзор — от 30 000₽ в месяц</h3>
+                        </article>
                     </li>
                     <li class="services__item">
-                        <img src="./resources/services-04.jpg" alt="Подбор материалов для комплектации интерьера"
-                            class="services__image">
-                        <h3>Комплектация — 5% от стоимости спецификации</h3>
+                        <article class="service-card">
+                            <img src="./resources/services-04.jpg" alt="Подбор материалов для комплектации интерьера"
+                                class="service-card__image">
+                            <h3 class="service-card__title">Комплектация — 5% от стоимости спецификации</h3>
+                        </article>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="landscape">
+
+        <section class="gallery" aria-labelledby="gallery-title">
             <div class="container">
-                <h3 class="landscape__title">Проект Двухкомнтаной квартиры в ЖК Лесной Пейзаж</h3>
+                <h3 id="gallery-title" class="gallery__title">Проект Двухкомнатной квартиры&nbsp;в&nbsp;ЖК&nbsp;Лесной
+                    Пейзаж</h3>
             </div>
         </section>
-        <section id="contacts" class="contacts">
+
+        <section id="contacts" class="contacts section" aria-labelledby="contacts-title">
             <div class="container">
                 <div class="contacts__wrapper">
-                    <h2 class="contacts__title">Контакты</h2>
-                    <a class="contacts__link" href="tel:+79358954535">+7 935 895-45-35</a> <br>
+                    <h2 id="contacts-title" class="contacts__title section__title">Контакты</h2>
+                    <a class="contacts__link" href="tel:+79358954535">+7 935 895-45-35</a><br>
                     <a class="contacts__link contacts__link-active" href="mailto:hello@mail.com">hello@mail.com</a>
                 </div>
             </div>
         </section>
     </main>
+
     <footer class="footer">
-        <nav class="nav footer__nav">
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a href="#about" class="nav__link nav__link-active footer__nav-link">О нас</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#projects" class="nav__link footer__nav-link">Проекты</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#services" class="nav__link footer__nav-link">Услуги</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#contacts" class="nav__link footer__nav-link">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <p class="footer__copyright">студия дизайна интерьера Метрика — 2023</p>
+        <div class="container footer__container">
+            <nav class="nav footer__nav" aria-label="Дополнительная навигация">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link footer__nav-link nav__link--active">О нас</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#projects" class="nav__link footer__nav-link">Проекты</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#services" class="nav__link footer__nav-link">Услуги</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#contacts" class="nav__link footer__nav-link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <p class="footer__copyright">студия дизайна интерьера Метрика — 2023</p>
+        </div>
     </footer>
 </body>
 
