--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="hero__image-wrapper">
                     <p class="hero__description">
                         Мы&nbsp;&mdash; команда квалифицированных дизайнеров и&nbsp;архитекторов, занимающихся
-                        разработкой и&nbsp;реализацией  дизайн-проектов
+                        разработкой и&nbsp;реализацией дизайн-проектов
                     </p>
                 </div>
             </div>
@@ -57,7 +57,8 @@
             <div class="container">
                 <h2 id="about-title" class="about__title section__title">О нас</h2>
                 <p class="about__description">
-                    Студия основана в&nbsp;2011&nbsp;году. Полностью отдаемся проектированию и&nbsp;реализации  интерьеров. К&nbsp;нам
+                    Студия основана в&nbsp;2011&nbsp;году. Полностью отдаемся проектированию и&nbsp;реализации
+                    интерьеров. К&nbsp;нам
                     обращаются за&nbsp;уютом, индивидуальными решениями и&nbsp;практичностью. Находим конструктивные
                     решения для каждого интерьера, вплоть до&nbsp;каждой детали&nbsp;&mdash; нацелены на&nbsp;результат.
                 </p>
@@ -123,35 +124,109 @@
                         <article class="service-card">
                             <img src="./resources/services-01.jpg" alt="Планировочное решение интерьера на чертеже"
                                 class="service-card__image">
-                            <h3 class="service-card__title">Планировочное решение — от 2500₽/м²</h3>
+                            <span class="service-card__price">от 2500₽/м²</span>
+                            <h3 class="service-card__title">Планировочное решение</h3>
                         </article>
                     </li>
                     <li class="services__item">
                         <article class="service-card">
                             <img src="./resources/services-02.jpg"
                                 alt="Готовый дизайн-проект интерьера с подбором цветов" class="service-card__image">
-                            <h3 class="service-card__title">Дизайн-проект — от 3000₽/м²</h3>
+                            <span class="service-card__price">от 3000₽/м²</span>
+                            <h3 class="service-card__title">Дизайн-проект</h3>
                         </article>
                     </li>
                     <li class="services__item">
                         <article class="service-card">
                             <img src="./resources/services-03.jpg"
                                 alt="Авторский надзор архитектора на строительной площадке" class="service-card__image">
-                            <h3 class="service-card__title">Авторский надзор — от 30 000₽ в месяц</h3>
+                            <span class="service-card__price">от 30 000₽/мес</span>
+                            <h3 class="service-card__title">Авторский надзор</h3>
                         </article>
                     </li>
                     <li class="services__item">
                         <article class="service-card">
                             <img src="./resources/services-04.jpg" alt="Подбор материалов для комплектации интерьера"
                                 class="service-card__image">
-                            <h3 class="service-card__title">Комплектация — 5% от стоимости спецификации</h3>
+                            <span class="service-card__price">5% от стоимости</span>
+                            <h3 class="service-card__title">Комплектация</h3>
+                        </article>
+                    </li>
+                </ul>
+                <button type="button" class="button button--primary services__button">Заказать услугу</button>
+            </div>
+        </section>
+
+        <section id="feedback" class="feedback section">
+            <div class="container">
+                <h2 class="feedback__title section__title">Отзывы</h2>
+                <ul class="feedback__list">
+                    <li class="feedback__item">
+                        <article class="feedback-card">
+                            <h3 class="feedback-card__title">Ксения, проект 65&nbsp;кв.м.</h3>
+                            <p class="feedback-card__description">Хочу искренне поблагодарить Вас за&nbsp;работу,
+                                проделанную
+                                на&nbsp;высоком уровне! Нам с&nbsp;мужем было очень приятно с&nbsp;Вами работать!
+                                Спасибо за&nbsp;Ваше
+                                умение правильно слышать пожелания своих клиентов и&nbsp;выполнять работу, которая
+                                превосходит все ожидания! Мы&nbsp;даже не&nbsp;надеялись, что на&nbsp;34&nbsp;кв.м.
+                                кто-то сможет нам
+                                грамотно разместить все, что мы&nbsp;хотим и&nbsp;даже больше!
+                            </p><br>
+                            <p class="feedback-card__description">
+                                Вам удалось это просто превосходно! Нам лишь осталось воплотить красоту, которую&nbsp;Вы
+                                нам
+                                создали в&nbsp;жизнь и&nbsp;поделиться с&nbsp;Вами результатом!
+                            </p>
+                        </article>
+                    </li>
+                    <li class="feedback__item">
+                        <article class="feedback-card">
+                            <h3 class="feedback-card__title">Регина, проект 89&nbsp;кв.м.</h3>
+                            <p class="feedback-card__description">Спасибо большое за&nbsp;такой классный проект! Все
+                                стильно,
+                                круто, продумано! Очень приятно было с&nbsp;вами работать! Спасибо, что терпели наши
+                                &laquo;хочу
+                                это, хочу&nbsp;то&raquo; в&nbsp;поисках идеального для нас ремонта. Здорово, что
+                                мы&nbsp;нашли такого
+                                основательного, ответственного и&nbsp;внимательного к&nbsp;деталям дизайнера!
+                            </p><br>
+                            <p class="feedback-card__description">
+                                Хочется скорее реализовать проект и&nbsp;наслаждаться современной, функциональной
+                                и&nbsp;красивой
+                                квартирой! Будем рекомендовать Вас всем друзьям и&nbsp;знакомым!
+                            </p>
+                        </article>
+                    </li>
+                    <li class="feedback__item">
+                        <article class="feedback-card">
+                            <h3 class="feedback-card__title">Яна, проект 120 кв.м.</h3>
+                            <p class="feedback-card__description">Хотелось&nbsp;бы сказать большое спасибо
+                                за&nbsp;проделанную работу!
+                                В&nbsp;задачу Марины входила разработка дизайн-проекта в&nbsp;минимальные сроки,
+                                и&nbsp;мне,
+                                конечно, не
+                                хотелось при этом потерять качество выполнения работы. Но&nbsp;волнения были напрасны:
+                                все
+                                вопросы решались оперативно, всегда предлагалось несколько вариантов решения,
+                                а&nbsp;также
+                                предоставлялись комментарии, какой способ решения будет более подходящим.
+                            </p><br>
+                            <p class="feedback-card__description">
+                                В&nbsp;итоге проект был сдан в&nbsp;оговоренный срок, и&nbsp;мне просто не&nbsp;терпится
+                                приступить к&nbsp;его
+                                реализации! Проект получился очень стильным и&nbsp;современным! Буду рекомендовать Вас
+                                тем,
+                                кому
+                                еще предстоит это непростое дело&nbsp;&mdash; ремонт!
+                            </p>
                         </article>
                     </li>
                 </ul>
             </div>
         </section>
 
-        <section class="gallery" aria-labelledby="gallery-title">
+        <section class="gallery section  " aria-labelledby="gallery-title">
             <div class="container">
                 <h3 id="gallery-title" class="gallery__title">Проект Двухкомнатной квартиры&nbsp;в&nbsp;ЖК&nbsp;Лесной
                     Пейзаж</h3>
